# chatgpt-exp

./: README.md  pyproject.toml
src/chatgpt_exp/: __init__.py  job_description.py  resume.py  z_prompt_not_used.py
