[tool.poetry]
name = "chatgpt-exp"
version = "0.1.0"
description = ""
authors = ["HB"]
readme = "README.md"
packages = [{include = "chatgpt_exp", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
docx2txt = "^0.8"
openai = "^0.27.4"
numpy = "^1.24.2"

[tool.poetry.scripts]
chatgpt_exp = "chatgpt_exp:main"

[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
